# GoIT_PyWeb_HW_14

./: main.py  pyproject.toml
docs/: conf.py  index.rst
src/: schemas.py
src/conf/: _config.py_
src/database/: connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  avatar.py  contacts.py
src/services/: email.py
tests/: conftest.py  test_route_avatar.py  test_unit_repository_contact.py  test_unit_users.py
